kurlypay content update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>김재민 이력서</title>
     <meta
       http-equiv="refresh"
-      content="0; url=https://puzzled-walk-76c.notion.site/e19aed9f716f4f139ffc56a190103120?pvs=4"
+      content="0; url=https://elastic-kettledrum-185.notion.site/d56435bf9c8d472fb28a2ebbfed917cb?pvs=4"
     />
   </head>
   <body></body>
